meerai-macros/src/tool/snapshots/meerai_macros__tool__attribute_tool__test__snapshot_attribute_with_params.snap
---
source: meerai-macros/src/tool/attribute_tool.rs
expression: "crate::test_utils::pretty_macro_output(&output)"
snapshot_kind: text
---
#[derive(meerai_macros::Toolset)]
#[toolset(
    name = "hello",
    tool(name = "Hello", description = "hello", params = HelloAttributeArgs)
)]
pub struct HelloToolset;
#[meerai_core::async_trait]
impl HelloInvoke for HelloToolset {
    async fn hello_attribute(
        &self,
        args: &HelloAttributeArgs,
    ) -> Result<meerai_core::ToolOutput, meerai_core::ToolError> {
        let __result = { return Ok(ToolOutput::Text("hello".into())) };
        return __result;
    }
}
